# preprocess-SVS-dataset

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_gv.ipynb  run_gv.py  run_mssv.ipynb  run_mssv.py  run_wav_feature_extract.py  test.py  test_feature_extract.ipynb  test_gv.ipynb  test_mssv.ipynb  verify_gv.py  verify_mssv.py
sample/gv/csv/: SINGER_16_10TO29_CLEAR_FEMALE_BALLAD_C0632.csv  SINGER_66_30TO49_HUSKY_MALE_DANCE_C2835.csv
sample/gv/json/: SINGER_16_10TO29_CLEAR_FEMALE_BALLAD_C0632.json  SINGER_66_30TO49_HUSKY_MALE_DANCE_C2835.json
sample/gv/midi/: SINGER_16_10TO29_CLEAR_FEMALE_BALLAD_C0632.mid  SINGER_66_30TO49_HUSKY_MALE_DANCE_C2835.mid
src/preprocess_svs/: __init__.py  feature.py  gv.py  lyric_normalizer.py  mssv.py  process_text.py  util.py
